# fun-with-fruits

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: python-ci.yml
backend/: README.md  changelog.md  pyproject.toml
backend/src/: database.py  main.py  settings.py
backend/src/fruits/: models.py  router.py  schemas.py  service.py  services.py
backend/src/tests/: assertions.py  conftest.py  test_fruits.py
frontend/: README.md  changelog.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: FruitsContainer.vue
frontend/src/components/fruits_content/: ApiForm.vue  FruitsList.vue
