[project]
name = "fun-with-fruits"
version = "0.0.1"
description = "An example CRUD project with FastAPI for the backend and Vue.js for the frontend"
authors = [{ name = "roberfi" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi (>=0.115.8,<0.116.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.4"
